[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radartools"
version = "0.0.1"
authors = [
    { name="Pablo Reyes", email="pablo.reyes@sri.com" },
]
description = "Package containing AMISR radar tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/amisr/radar-tools"
"Bug Tracker" = "https://github.com/amisr/radar-tools/issues"

